# learning-path-optimizer

./: .gitignore  README.md  main.py  pyproject.toml
benchmarks/: benchmark_metrics.json
benchmarks/advanced/instance_01/: activities.json  lessons.json  metadata.json
benchmarks/advanced/instance_02/: activities.json  lessons.json  metadata.json
benchmarks/advanced/instance_03/: activities.json  lessons.json  metadata.json
benchmarks/basic/instance_01/: activities.json  lessons.json  (+1 more)
data/: activities.json  lessons.json
models/clustering/: path_clusterer.py
models/cp/: path.py  path_optimizer.py
models/dataclasses/: activity.py  learner.py  lesson.py
models/exceptions/: missing_prerequisite.py
output/graphs/: Advanced_Tier___Instance_1.html  Advanced_Tier___Instance_2.html  Basic_Tier___Instance_3.html  Intermediate_Tier___Instance_1.html  Intermediate_Tier___Instance_2.html  Intermediate_Tier___Instance_3.html
output/heuristics/: heuristic_results_advanced_inst_1 copy.csv  heuristic_results_advanced_inst_1.csv  heuristic_results_basic_inst_1.csv  heuristic_results_intermediate_inst_1 copy.csv  heuristic_results_intermediate_inst_1.csv
scripts/: benchmark.py  data_generator.py
src/constants/: constants.py
src/dataclasses/: activity.py  learner.py  lesson.py
tests/: test_clusterer.py  test_heuristics.py  test_optimizer.py  test_path.py
utils/: data_loader.py  instance_graph.py  lesson_graph_builder.py  lessons_topology.py  logger.py
visualizations/: Advanced_Tier___Instance_3.html  Basic_Tier___Instance_1.html  Basic_Tier___Instance_2.html
(+8 files in other folders)
